@@ -1,0 +1,12 @@
+package org.hick.blah;
+
+public class SqueezeBox
+{
+   protected int sq = 33;
+
+   public int squeeze()
+   { 
+      sq++;
+      return sq;
+   }
+}
